# AgentPlatform

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Makefile  README.md
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_phase0.py  0002_phase1_provider.py  0003_phase1_extensions.py  0004_phase2_outbox.py  0005_notify_trigger.py  0006_projection_log.py  0007_phase1b_context_window.py  0008_phase1c_session_transcripts.py  0009_phase1d_end_users.py  0010_phase1e_provider_owner.py  0011_phase1f_works.py  0012_phase1g_ops_eval.py
services/api/app/: main.py  settings.py
services/api/app/db/: migrate.py  migration_sql.py  pool.py
services/api/app/middleware/: request_context.py
services/api/app/models/: responses.py
services/api/app/observability/: metrics.py
services/api/app/routers/: auth.py  health.py  ops_eval.py  runs.py  sessions.py  turns.py  works.py
services/api/app/services/: outbox.py
services/api/app/worker/: main.py
services/api/tests/: test_admin_auth.py  test_end_user_auth.py  test_logging.py  test_metrics.py  test_migrate.py  test_migration_sql.py  test_model_providers_auth_contract.py  test_model_providers_owner.py  test_outbox_worker.py  test_projector.py  test_realtime_events.py  test_request_context.py  test_run_status.py  test_runtime_client.py  test_runtime_router.py  test_tracing.py  test_ux_signals_api.py  test_works.py
services/api/tests/integration/: test_api_routers.py
services/runtime/: Dockerfile  Dockerfile.retrieval  README.md  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
services/runtime/app/: main.py  request_context_vars.py  settings.py  tenant_context.py
services/runtime/app/context/: compact_summarizer.py  engine.py  policy.py  project.py  summary.py
services/runtime/app/contracts/: event_validation.py
services/runtime/app/controller/: checkpoint_store.py  events.py  (+13 more)
services/runtime/tests/: conftest.py  test_agent_engine.py  test_agent_prefix_stability.py  test_bootstrap_registry.py  test_checkpoint_volatile.py  test_code_chunking.py  test_compact_model.py  test_compact_summarizer.py  test_context_engine.py  test_continuity_pending.py  test_delegate_and_abort.py  test_egress.py  test_eval_rubric.py  test_event_sequence_race.py  test_export_lint.py  test_focus.py  test_gateway_retry.py  test_gateway_stub.py  test_harness_ah.py  test_index_scheduler.py  test_input_compiler.py  test_keyword_hit.py  test_live_providers.py  test_logging.py  test_manuscript.py  test_memory_tools.py  test_model_config_owner.py  test_observability.py  test_openai_messages.py  test_path_filter.py  test_pgvector_store.py  test_plan_backfill.py  test_plan_phase.py  test_plan_suggest.py  test_privacy_redact.py  test_retrieval_hybrid.py  test_search_records.py  test_secret_scan.py  test_seed_corpus.py  test_session_transcript.py  (+24 more)
(+435 files in other folders)
