[project]
name = "agent-api"
version = "0.1.0"
description = "Agent Platform HTTP API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "agent-contracts>=0.1.0",
    "cryptography>=42.0",
    "structlog>=24.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
fail_under = 80
include = [
    "app/observability/*",
    "app/db/migration_sql.py",
    "app/db/migrate.py",
    "app/middleware/*",
    "app/context.py",
    "app/routers/health.py",
    "app/routers/sessions.py",
    "app/routers/runs.py",
    "app/routers/turns.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
