[project]
name = "agent-runtime"
version = "0.1.0"
description = "Agent Platform Runtime"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "cryptography>=42.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "agent-contracts>=0.1.0",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "langgraph>=0.2",
    "ruff>=0.3",
    "structlog>=24.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]
retrieval = [
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
fail_under = 80
include = [
    "app/tools/core/*",
    "app/engine/*",
    "app/graph/*",
    "app/scenarios/registry.py",
    "app/observability/*",
    "app/context/engine.py",
    "app/controller/input_compiler.py",
    "app/tools/bootstrap.py",
    "app/tools/registry.py",
    "app/retrieval/*",
]
